<resources>
    <string name="app_name">MobileApp_Project</string>
    <string name="contact_us">contact_us</string>
    <string name="xyzgmailcom">xyzgmailcom</string>
    <string name="_927676767778">_927676767778</string>
    <string name="xyz_location">xyz_location</string>
    <string name="phone">phone</string>
    <string name="name">name</string>
    <string name="message">message</string>
    <string name="submit">submit</string>
    <string name="back">back</string>

    <string name="Open">MediCareHospital</string>
    <string name="Close">MediCareHospital</string>
    <string name="about_us">about_us</string>
    <string name="service">service</string>
    <string name="welcome_to_medicare_hospital">welcome_to_medicare_hospital</string>
    <string name="our_doctors_team">Our Doctors Team</string>
    <string name="for_more_details_and_information_please_feel_free_to_contact_us">For more details and information please feel free to Contact us</string>
    <string name="more">More</string>
    <string name="to_read_the_policy_of_our_hospital">To read the policy of our hospital</string>
    <string name="terms_n_condition">Terms n Condition</string>
    <string name="nav_bar">nav_bar</string>
    <string name="contact">Contact</string>
    <string name="doctors">doctors</string>
    <string name="backtohomepage">backtohomepage</string>
    <string name="dr_sadia">dr_sadia</string>
    <string name="dr_umer">dr_umer</string>
    <string name="dr_uzair">dr_uzair</string>
    <string name="view_profiledoc4">View Profiledoc4</string>
    <string name="view_profiledoc1">view_profiledoc1</string>
    <string name="view_profiledoc2">view_profiledoc2</string>
    <string name="view_profiledoc3">view_profiledoc3</string>
    <string name="dr_ayesha">dr_ayesha</string>
    <string name="_1_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex">_1_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex</string>
    <string name="back1">back1</string>
    <string name="_2_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex">_2_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex</string>
    <string name="back2">back2</string>
    <string name="_3_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex">_3_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex</string>
    <string name="back3">back3</string>
    <string name="_4_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex">_4_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_curabitur_aliquam_placerat_justo_nec_rhoncus_nibh_gravida_nec_donec_hendrerit_condimentum_tincidunt_sed_porttitor_pretium_ligula_eu_mattis_nisi_blandit_eu_quisque_consectetur_erat_malesuada_aliquet_dictum_arcu_ligula_molestie_diam_tempus_sagittis_lectus_mauris_non_ex</string>
    <string name="back4">back4</string>
    <string name="services">services</string>
    <string name="doctor_s_visit_doctor_s_visit_gives_us_a_meeting_between_a_patient_with_a_physician_to_get_health_advice_or_treatment_plan_for_a_symptom_or_condition">doctor_s_visit_doctor_s_visit_gives_us_a_meeting_between_a_patient_with_a_physician_to_get_health_advice_or_treatment_plan_for_a_symptom_or_condition</string>
    <string name="nurse_visit_nurse_visit_is_a_family_nurse_contact_which_allows_the_health_worker_to_assess_the_home_and_family_situations_in_order_to_provide_the_necessary_nursing_care_and_health_related_activities">nurse_visit_nurse_visit_is_a_family_nurse_contact_which_allows_the_health_worker_to_assess_the_home_and_family_situations_in_order_to_provide_the_necessary_nursing_care_and_health_related_activities</string>
    <string name="physiotherapist_visit_their_goal_is_to_help_you_overcome_physical_traumas_caused_by_accidents_diseases_aging_health_conditions_and_disorders_through_certain_exercises_massages_lifestyle_activities_stretching_etc">physiotherapist_visit_their_goal_is_to_help_you_overcome_physical_traumas_caused_by_accidents_diseases_aging_health_conditions_and_disorders_through_certain_exercises_massages_lifestyle_activities_stretching_etc</string>
    <string name="medicine_delivery_at_your_doorstep_medicine_is_easily_available_at_your_doorstep_with_the_prescription_of_the_doctor">medicine_delivery_at_your_doorstep_medicine_is_easily_available_at_your_doorstep_with_the_prescription_of_the_doctor</string>
    <string name="home_laboratory_sample_collection_as_the_name_suggests_home_sample_collection_is_a_service_wherein_representatives_of_apollo_clinic_will_provide_diagnostic_services_at_your_doorstep">home_laboratory_sample_collection_as_the_name_suggests_home_sample_collection_is_a_service_wherein_representatives_of_apollo_clinic_will_provide_diagnostic_services_at_your_doorstep</string>
    <string name="home_page">home_page</string>
    <string name="at_a_glance_we_immediately_look_upon_our_patients">at_a_glance_we_immediately_look_upon_our_patients</string>
    <string name="terms_and_conditions">terms_and_conditions</string>
    <string name="we_reserve_the_right_at_any_time_without_liability_for_doing_so_to_modify_or_discontinue_temporarily_or_permanently_any_of_the_content_functions_or_services_we_offer_on_the_site_or_any_part_of_them_with_or_without_notice_this_includes_removing_information_transmitted_by_you_to_us">we_reserve_the_right_at_any_time_without_liability_for_doing_so_to_modify_or_discontinue_temporarily_or_permanently_any_of_the_content_functions_or_services_we_offer_on_the_site_or_any_part_of_them_with_or_without_notice_this_includes_removing_information_transmitted_by_you_to_us</string>
    <string name="we_have_taken_every_care_in_the_preparation_of_the_site_however_as_certain_technical_matters_may_be_beyond_our_control_we_cannot_guarantee_that_you_will_have_uninterrupted_or_error_free_access_to_the_site_at_all_times">we_have_taken_every_care_in_the_preparation_of_the_site_however_as_certain_technical_matters_may_be_beyond_our_control_we_cannot_guarantee_that_you_will_have_uninterrupted_or_error_free_access_to_the_site_at_all_times</string>
    <string name="its_summary_explains_who_the_company_is_its_brand_values_and_how_it_differs_from_other_italian_menswear_brands_the_copywriting_is_clear_and_straightforward_which_makes_40_colori_sound_credible_and_friendly_it_centers_on_the_company_s_two_co_founders_who_dropped_out_of_college_and_includes_photos_of_them_to_put_a_face_to_their_names_before_getting_into_their_product_promise_and_finally_their_company_philosophy">Its summary explains who the company is, its brand values, and how it differs from other Italian menswear brands. The copywriting is clear and straightforward, which makes 40 Colori sound credible and friendly. It centers on the company’s two co-founders, who dropped out of college, and includes photos of them to put a face to their names before getting into their product promise and finally their company philosophy.</string>
    <string name="backtohome">BackToHome</string>
    <string name="about_uss">About_uss</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="medicare_hospital">Medicare Hospital</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="signup">Signup</string>
    <string name="by_proceeding_you_have_agree_to_the_terms_n_condition">by_proceeding_you_have_agree_to_the_terms_n_condition</string>
    <string name="phone_number">phone_number</string>
    <string name="confrim_password">confrim_password</string>
    <string name="email">email</string>
    <string name="last_name">last_name</string>
    <string name="first_name">first_name</string>
    <string name="sign_up">sign_up</string>

</resources>